# mongodb-atlas-k8s-operator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.yaml  foo.json
crds/: atlasusers.yaml
crds/examples/: john_doe.yaml
src/: config.rs  crd.rs  error.rs  k8s.rs  main.rs
src/atlas/: client.rs  context.rs  error.rs  mod.rs  repository.rs  user.rs  user_request.rs  user_response.rs
src/cli/: mod.rs
src/control_loop_watcher/: error.rs  mod.rs
src/http_client/: error.rs  mod.rs
src/logger/: encoder.rs  error.rs  mod.rs
src/operator/: atlasuser.rs  error.rs  mod.rs
src/reconciler/: atlasuser.rs  mod.rs
