[package]
name = "mongodb-atlas-k8s-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }

tokio = { version = "1.37.0", features = ["full"] }
futures = { version = "0.3.30", default-features = true }
async-trait = "0.1.80"

reqwest = { version = "0.12.4", default-features = false, features = ["gzip", "json", "rustls-tls"] }
diqwest = "3.0.0"
url = { version = "2.5.0", features = ["serde"] }

kube = { version = "0.92.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
schemars = "0.8"

mongodb = {version = "2.8.2", features = ["tokio-runtime"]}
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
log4rs = { version = "1.3.0", features = ["json_encoder"]}

thiserror = "1"

serde = { version = "1.0.199", features = ["derive", "rc"] }
serde_json = "1.0.116"
serde_with = { version = "3.8.1", features = ["chrono_0_4"]}

vaultier = "0.3.0"
chrono = {version = "0.4.38", features = ["serde"]}
anyhow = "1.0.86"
