[package]
name = "mongodb-atlas-k8s-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }

tokio = { version = "1.37", features = ["full"] }
futures = { version = "0.3", default-features = true }
async-trait = "0.1"

reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
url = { version = "2.5", features = ["serde"] }

kuberator = "0.3.2"
kube = { version = "2.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
schemars = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "1"
anyhow = "1"

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
serde_with = { version = "3", features = ["chrono_0_4"] }
humantime-serde = "1.1"

chrono = { version = "0.4", features = ["serde"] }
